--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
+    "firebase": "^8.0.0",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "sweetalert2": "^10.9.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-firestore": "^0.3.30",
+    "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
