--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "sweetalert2": "^10.9.0",
     "vue": "^2.6.12",
     "vue-firestore": "^0.3.30",
+    "vue-moment": "^4.1.0",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.2.0",
     "vue2-editor": "^2.10.2"
   },
@@ -30,6 +32,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "ip": "^1.1.5",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
