--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-moment": "^4.1.0",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.2.0",
-    "vue2-editor": "^2.10.2"
+    "vue2-editor": "^2.10.2",
+    "vue2-filters": "^0.11.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
